feat: add support for screenshot on unauthor
